--- a/index.html
+++ b/index.html
@@ -125,30 +125,20 @@
     
     <!-- Section Hero avec Image du Château en fond -->
     <section class="hero-section">
+        <!-- Badges positionnés sur la photo -->
+        <div style="position: absolute; top: 30px; right: 30px; z-index: 20; display: flex; gap: 20px;">
+            <img src="https://cdn1.mariages.net/img/badges/2024/badge-weddingawards_fr_FR.jpg" 
+                 alt="Wedding Awards 2024 Mariages.net" 
+                 style="width: 120px; height: auto; filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.5));">
+            <img src="https://asset1.zankyou.com/img/sections/badgets/zk_recommend/circle/badge_black_fr.png" 
+                 alt="Zankyou Recommended" 
+                 style="width: 120px; height: auto; filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.5));">
+        </div>
+        
         <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white; z-index: 10;">
             <h1 style="font-size: 3.5rem; margin-bottom: 20px; text-shadow: 3px 3px 6px rgba(0,0,0,0.9); font-family: 'Georgia', serif;">Un lieu d'exception pour vos événements</h1>
             <p style="font-size: 1.8rem; margin-bottom: 40px; text-shadow: 2px 2px 4px rgba(0,0,0,0.9);">Château du XVIIe siècle au cœur de l'Anjou</p>
             <a href="chateau.html" class="btn-primary" style="font-size: 1.2rem; padding: 18px 45px;">Découvrir le château</a>
-        </div>
-    </section>
-
-    <!-- Section Badges Awards -->
-    <section class="award-section" style="padding: 50px 0;">
-        <div class="container">
-            <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
-                <div class="award-badge" style="text-align: center;">
-                    <img src="https://cdn1.mariages.net/img/badges/2024/badge-weddingawards_fr_FR.jpg" 
-                         alt="Wedding Awards 2024 Mariages.net" 
-                         style="width: 140px; height: auto; display: block; margin: 0 auto;">
-                    <p style="margin-top: 10px; font-size: 0.95rem; color: #c9a961; font-weight: 600;">Wedding Awards 2024</p>
-                </div>
-                <div class="award-badge" style="text-align: center;">
-                    <img src="https://asset1.zankyou.com/img/sections/badgets/zk_recommend/circle/badge_black_fr.png" 
-                         alt="Zankyou Recommended" 
-                         style="width: 140px; height: auto; display: block; margin: 0 auto;">
-                    <p style="margin-top: 10px; font-size: 0.95rem; color: #c9a961; font-weight: 600;">Recommandé par Zankyou</p>
-                </div>
-            </div>
         </div>
     </section>
 
